# MiroWorld-dev

./: .editorconfig  .env.example  .gitignore  .impeccable.md  README.md  package-lock.json  package.json  start-miroworld.cmd  start-miroworld.ps1  stop-miroworld.cmd  stop-miroworld.ps1
apps/api/: pyproject.toml
apps/api/src/: __init__.py  config.py  main.py
apps/api/src/core/: __init__.py  errors.py  logging.py  middleware.py
apps/api/src/features/: __init__.py
apps/api/src/features/fixtures/: __init__.py  router.py
apps/api/src/features/projects/: __init__.py  calibration_engine.py  cost_confidence_engine.py  editorial_engine.py  fixture_repository.py  llm_adapter.py  models.py  process_trace_builder.py  reasoning_jobs.py  replay_engine.py  repository.py  router.py  seed_compiler.py  service.py  share_engine.py  stage_builder.py
apps/api/src/features/system/: __init__.py  router.py
apps/api/src/shared/: utils.py
apps/api/tests/: test_api.py
contracts/: actor-action.schema.json  branch.schema.json  calibration-record.schema.json  confidence-update.schema.json  cost-lens.schema.json  generic-event-seed.schema.json  graph-benchmark-report.schema.json  key-event.schema.json  knowledge-item.schema.json  reasoning-status.schema.json  replay-result.schema.json  share-artifact.schema.json  stage-response.schema.json  strategic-actor-profile.schema.json  strategic-simulation-config.schema.json  user-input-record.schema.json  world-state.schema.json
docs/: BLOCKERS.md  CURRENT_STATUS.md  DEVELOPMENT_LOG.md  NEXT_WORK_PLAN.md  README.md
fixtures/: README.md  (+13 more)
(+28 files in other folders)
