[project]
name = "miroworld-api"
version = "0.1.0"
description = "FastAPI backend for the MiroWorld-dev experience-first rebuild"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.11.0",
  "python-dotenv>=1.1.1",
  "uvicorn>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.25.1",
  "pytest>=8.4.2"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
